fixed broken SDK soft link

--- a/SDK/lib/arm64/libOrbbecSDK.so.1.5
+++ b/SDK/lib/arm64/libOrbbecSDK.so.1.5
@@ -1,3 +1,1 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:3511f5295d49c02f41889ad213393cb33aaba8701290fdf15438b20b20ff6c3a
-size 88574920
+libOrbbecSDK.so.1.5.6
