--- a/SDK/lib/x64/libOrbbecSDK.so.1.5
+++ b/SDK/lib/x64/libOrbbecSDK.so.1.5
@@ -1,3 +1,1 @@
-version https://git-lfs.github.com/spec/v1
-oid sha256:98c7954de7f2c52e4702dd1021b754d09b0f491ef86cb62b62f0377734b52e33
-size 86275936
+libOrbbecSDK.so.1.5.6
